Add a single cell to instantiate heat diffusion environment

--- a/parts/gpu/heat-diffusion.ipynb
+++ b/parts/gpu/heat-diffusion.ipynb
@@ -15,56 +15,9 @@
    },
    "outputs": [],
    "source": [
-    "#using Pkg\n",
-    "#Pkg.add(\"CUDA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#import Pkg\n",
-    "#Pkg.add(\"BenchmarkTools\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#import Pkg\n",
-    "#Pkg.add(\"ProgressMeter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#import Pkg\n",
-    "#Pkg.add(\"KernelAbstractions\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#import Pkg\n",
-    "#Pkg.add(\"CairoMakie\")"
+    "# Running this cell is important to make sure we install all the necessary packages.\n",
+    "using Pkg\n",
+    "Pkg.instantiate()"
    ]
   },
   {
