Add also activate commands

--- a/exercises/multithreading/multithreading.ipynb
+++ b/exercises/multithreading/multithreading.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "# Running this cell is important to make sure we install all the necessary packages.\n",
     "using Pkg\n",
+    "Pkg.activate(@__DIR__)\n",
     "Pkg.instantiate()"
    ]
   },
